# Music-Library-Transfer-App

./: CMakeLists.txt  LICENSE  README.md
Appl/: AppleMusicAPI.cpp  AppleMusicAPI.h  Converter.cpp  Converter.h  MusicProfile.cpp  MusicProfile.h  Platforms.h  PlayList.cpp  PlayList.h  Server.cpp  Server.h  Song.cpp  Song.h  SpotifyMusicAPI.cpp  SpotifyMusicAPI.h  User.cpp  User.h  WebDomainAPI.cpp  WebDomainAPI.h
Documentation/: Music_Converter_Backend_UML-3.drawio
LearningC++/: CMakeLists.txt  main.cpp
